// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBoxTitle alert variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Warning alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box warning
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle custom icon variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box custom
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle custom variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Custom alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box warning
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle danger variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Danger alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box danger
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle info variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Info alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box info
    </span>
  </h1>
</DocumentFragment>
`;

exports[`ModalBoxTitle success variant 1`] = `
<DocumentFragment>
  <h1
    class="pf-v6-c-modal-box__title pf-m-icon"
    id="boxId"
  >
    <span
      class="pf-v6-c-modal-box__title-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </span>
    <span
      class="pf-v6-screen-reader"
    >
      Success alert:
    </span>
    <span
      class="pf-v6-c-modal-box__title-text"
    >
      Test Modal Box success
    </span>
  </h1>
</DocumentFragment>
`;
